Use correct colour role when painting text delegates on a view

REVIEWED-BY: Martin Klapetek

BUG: 308802
FIXED-IN: 0.5.2